Bug 166517 - Writer table: outside border not visible for very small cell with padding (24.8 regression)
Summary: Writer table: outside border not visible for very small cell with padding (24...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.6.2 release
Hardware: All All
: medium normal
Assignee: Mohit Marathe
URL:
Whiteboard: target:25.8.0 target:25.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Table-Borders
  Show dependency treegraph
 
Reported: 2025-05-10 15:40 UTC by Ming Hua
Modified: 2025-06-05 15:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example Document (16.71 KB, application/vnd.oasis.opendocument.text)
2025-05-10 15:40 UTC, Ming Hua
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ming Hua 2025-05-10 15:40:02 UTC
Created attachment 200729 [details]
Example Document

Description:

I encountered this bug quite soon after upgrading to 24.8 from 24.2, on a template I use quite often. There is a table in the Writer ODT document, and the outside border of the whole table is set to Thin (0.75 pt), and other borders between cells inside the table are set to be invisible.

This worked with old 24.2, but in 24.8 the bottom border, or more precisely the borders for the empty cell in the last row of the table is not seen anymore.

I've attached an example document to show the problem.  Hope the problem is apparent enough with the example.

Version Information:

The bug exists in both

Version: 24.8.6.2 (X86_64) / LibreOffice Community
Build ID: 6d98ba145e9a8a39fc57bcc76981d1fb1316c60c
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: zh-CN (zh_CN); UI: en-US
Calc: CL threaded

and

Version: 25.2.3.1 (X86_64) / LibreOffice Community
Build ID: d8d1af5f77df955194e52baabe19324532ac8e8b
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 26100); UI render: default; VCL: win
Locale: zh-CN (zh_CN); UI: en-US
Calc: CL threaded

But does not exist in

Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: ee3885777aa7032db5a9b65deec9457448a91162
CPU threads: 12; OS: Windows 10.0 Build 26100; UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: en-US
Calc: CL threaded
Comment 1 raal 2025-05-10 17:59:24 UTC
Confirm with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 32c7035824e50429c4ffeb43d0bdf306ba8874e9
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 raal 2025-05-10 18:06:41 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.2.
Adding Cc: to Michael Stahl ; Could you possibly take a look at this one?
Thanks
 eb02fbc9b7bc7bf80c43f798ea2f0f77f5da7d5e is the first bad commit
commit eb02fbc9b7bc7bf80c43f798ea2f0f77f5da7d5e
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Sat Jan 25 23:02:36 2025 +0100

    source 2cd7a8dcda05d584168d5ef5d7b1ac6c7da0c2e1

180726: sw: layout: fix bad split table resulting in empty cell | https://gerrit.libreoffice.org/c/core/+/180726
Comment 3 nobu 2025-05-10 22:03:05 UTC
Regardless of whether the content is empty or not, I think it has something to do with the table's top and bottom margins (Table Properties > Borders > Padding > (Top,Bottom).
Comment 4 Ming Hua 2025-05-11 00:56:21 UTC
(In reply to nobu from comment #3)
> Regardless of whether the content is empty or not, I think it has something
> to do with the table's top and bottom margins (Table Properties > Borders >
> Padding > (Top,Bottom).
Indeed, it seems the bug happens when the cell height is smaller than the padding.  And whether the cell is empty or not is irrelevant.

I've changed the bug summary accordingly.
Comment 5 Commit Notification 2025-05-26 07:16:14 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e887210914951b7b3f72dac5609fb12e4c3319f5

tdf#166517 paint borders of frame with zero print area

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-05-28 08:07:32 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/0952960b41f4e89548b00399fbc3b9001ea67e59

tdf#166517 paint borders of frame with zero print area

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-05-29 04:35:10 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-4":

https://git.libreoffice.org/core/commit/492ae0bd5a9508cc4395f2c82bb16d9b8efc87f5

tdf#166517 paint borders of frame with zero print area

It will be available in 25.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Stahl 2025-06-02 06:52:12 UTC
thanks Mohit for fixing this
Comment 9 Ming Hua 2025-06-05 15:25:45 UTC
I confirm this is fixed in 25.2.4:
Version: 25.2.4.2 (X86_64) / LibreOffice Community
Build ID: 508ff62361999404a9d3590fe47df713b5888744
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: zh-CN (zh_CN); UI: en-US
Calc: CL threaded

Thanks Mohit!