tdf#166517 paint borders of frame with zero print area

allow painting borders when text frame in the cell is hidden, but
the cell is not hidden

(regression from commit 08007b5f0ab0538bb907b99770938bb9f10dba20)

Change-Id: Idc1810d95d6d32a3a9b09486a1581614b5546434
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185728
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit e887210914951b7b3f72dac5609fb12e4c3319f5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185778
(cherry picked from commit 0952960b41f4e89548b00399fbc3b9001ea67e59)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185962
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Mohit Marathe <mohit.marathe.extern@allotropia.de>
Reviewed-by: Mohit Marathe <mohit.marathe.extern@allotropia.de>